edited resumer header

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React Developer Resume</title>
+    <title>React Developer Resume</title>    
     <link rel="stylesheet" href="resume.css">
 </head>
 
@@ -15,6 +15,7 @@
                 :
                 Addis Ababa, Ethiopia</span></p>
         <p class="position">React Full Stack Developer</p>
+        <hr class="header-hr"/>
         <div class="summary">
             Passionate and adaptable junior React developer with a strong foundation in JavaScript, HTML, and CSS. Eager
             to
