--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React Developer Resume</title>    
+    <title>React Developer Resume</title>
     <link rel="stylesheet" href="resume.css">
 </head>
 
@@ -14,7 +14,7 @@
         <p class="contact"> <span>Mobile : (251)-943946168</span> <span>Email : birechis@gmail.com</span> <span>Address
                 :
                 Addis Ababa, Ethiopia</span></p>
-        <p class="position">React Full Stack Developer</p>       
+        <p class="position">React Full Stack Developer</p>
         <div class="summary">
             Passionate and adaptable junior React developer with a strong foundation in JavaScript, HTML, and CSS. Eager
             to
@@ -73,7 +73,7 @@
             <ul class="project1list">
                 <li>Skilled in integrating RSETful APIs with React applications for seamless data flow.</li>
                 <li>Experience working with backend technologies like Node.js, Express.js, and MongoDB.</li>
-                <li>Experience working with Stripe and PayPall payment system integration.</li>
+                <li>Experience working with Stripe and PayPal payment system integration.</li>
                 <li>Proficient in version control using Git and Github.</li>
             </ul>
         </div>
